--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,11 @@ phases:
       commands:
       - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - $(aws ecr get-login --no-include-email)
+      - curl -o aws-iam-authenticator  https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
+      - curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/kubectl
+      - chmod +x ./kubectl ./aws-iam-authenticator
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+      - kubectl get svc
   build:
     commands:
       - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
