--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,6 @@
 ---
+
+#pip install --upgrade python &&
 version: 0.2
 phases:
   install:
@@ -8,7 +10,7 @@ phases:
       - curl -sS -o bin/kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/kubectl
       - chmod +x ./bin/kubectl ./bin/aws-iam-authenticator
       - mkdir -p golang/bin && export GOPATH=$PWD/golang && export PATH=$PWD/golang/bin:$PWD/bin:$PATH
-      - apt-get update && apt-get -y install golang python3-pip python3-dev && pip install --upgrade python && pip3 install --upgrade awscli
+      - apt-get update && apt-get -y install golang python3-pip python3-dev && pip3 install --upgrade awscli
   pre_build:
       commands:
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
