--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   pre_build:
       commands:
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-        - sed -i 's/CONTAINER_IMAGE/$REPOSITORY_URI:$TAG/g' hello-k8s.yml
+        - sed -i "s/CONTAINER_IMAGE/$REPOSITORY_URI:$TAG/g" hello-k8s.yml
         - cat hello-k8s.yml
         - $(aws ecr get-login --no-include-email)
         - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
