--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' hello-k8s.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
-        - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+        - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --verbose
         - echo $HOME
         - cat $HOME/.kube/config
         - cat ~/.kube/config
