--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-kubernetes
+  name: hello-k8s
 spec:
   type: LoadBalancer
   ports:
@@ -13,7 +13,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-k82
+  name: hello-k8s
 spec:
   replicas: 3
   selector:
