--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,6 @@ phases:
     commands:
       - docker push $REPOSITORY_URI:$TAG
       - kubectl apply -f hello-k8s.yml
-      - printf '[{"name":"${ServiceName}","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
+      - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
